# stlta

./: .travis.yml  AUTHORS  Makefile.am  README  README.md  STL_TA.pc.in  configure.ac  ema.h  functions.cpp  functions.h  max.h  min.h  momentum.h  roc.h  sma.h  stlta.pc.in  subtract.h
include/: ema.h  functions.h
src/: functions.cpp
stlta/: ema.h  functions.cpp  functions.h  max.h  min.h  momentum.h  stlta.hpp  subtract.h
test/: main.cpp
